feat:0003 practice mode added.

--- a/test/whisper_test.ipynb
+++ b/test/whisper_test.ipynb
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -89,11 +89,35 @@
       "QT5 Player started\n",
       "press 'o' to open file (see context menu for more)\n",
       "../assets/demo.mp4\n",
-      "durationChanged\n",
       "mediaStateChanged\n",
       "Caption loaded\n",
-      "Fullscreen an\n",
-      "Fullscreen aus\n",
+      "mediaStateChanged\n",
+      "mediaStateChanged\n",
+      "mediaStateChanged\n",
+      "mediaStateChanged\n",
+      "mediaStateChanged\n",
+      "mediaStateChanged\n",
+      "mediaStateChanged\n",
+      "text:名取市の警察学校で女性警察官が逮捕術や護身術を学ぶ研修会が開かれました\n",
+      "your answer:123\n",
+      "\n",
+      "text:研修会は県警の女性警察官全員が対象で今日は10代から50代までのおよそ160人が参加しました\n",
+      "your answer:123\n",
+      "\n",
+      "text:県警では今年の女性警察官の割合が11%と過去最高となった一方、女性警察官の現場での対応力の強化が求められています\n",
+      "your answer:123\n",
+      "\n",
+      "text:参加者は防御訓練のほか、昨年度から導入された軽くて扱いやすい三段式形状を使った逮捕術などを学びました\n",
+      "your answer:123\n",
+      "\n",
+      "text:危険な現場というのは男女関係なくありますので、その現場にもすぐに対応できるように女性としても訓練に訓練を磨きかけなければいかないと思いました\n",
+      "your answer:123\n",
+      "\n",
+      "text:県内では女性警察官が酒を飲んで暴れている人を保護する際に怪我をすることもあったことから、県警は今後も技術向上に向け研修会を行うとしています\n",
+      "your answer:123\n",
+      "\n",
+      "\n",
+      "Success!\n",
       "mediaStateChanged\n",
       "Goodbye ...\n"
      ]
@@ -103,21 +127,6 @@
      "output_type": "stream",
      "text": [
       "No schemas installed\n",
-      "[AVHWFramesContext @ 0000021E35021EC0] Static surface pool size exceeded.\n",
-      "[h264 @ 0000021E34928E00] get_buffer() failed\n",
-      "[h264 @ 0000021E34928E00] thread_get_buffer() failed\n",
-      "[h264 @ 0000021E34928E00] decode_slice_header error\n",
-      "[h264 @ 0000021E34928E00] no frame!\n",
-      "[AVHWFramesContext @ 0000021E35021EC0] Static surface pool size exceeded.\n",
-      "[h264 @ 0000021E34927A00] get_buffer() failed\n",
-      "[h264 @ 0000021E34927A00] thread_get_buffer() failed\n",
-      "[h264 @ 0000021E34927A00] decode_slice_header error\n",
-      "[h264 @ 0000021E34927A00] no frame!\n",
-      "[AVHWFramesContext @ 0000021E35021EC0] Static surface pool size exceeded.\n",
-      "[h264 @ 0000021E34928A00] get_buffer() failed\n",
-      "[h264 @ 0000021E34928A00] thread_get_buffer() failed\n",
-      "[h264 @ 0000021E34928A00] decode_slice_header error\n",
-      "[h264 @ 0000021E34928A00] no frame!\n",
       "No schemas installed\n"
      ]
     }
